@startuml
' Principales clases dentro del servicio orquestador
class SagaController {
  +iniciarAltaEmpleadoYContrato()
  +getStatus()
}
class SagaOrchestratorService {
  -stateMachine : StateMachine
  +startSaga()
  +handleEvent(evt)
}
class StateMachine {
  +sendEvent(evt)
  +getState(id)
}
class EmpleadoSagaActions
class ContratoSagaActions
class NominaSagaActions
class ContratoLaboralDto {
  salario : Double
}
SagaController --> SagaOrchestratorService
SagaOrchestratorService --> StateMachine
StateMachine --> EmpleadoSagaActions
StateMachine --> ContratoSagaActions
StateMachine --> NominaSagaActions
ContratoSagaActions --> ContratoLaboralDto
@enduml
